@startuml class
title Class Diagram


package ProductMicroservice {
    class ProductService {
        + addProduct(name: String, category: String, price:Number): Void
        + updateProduct(productId:Number, name: String, category: String, price:Number): Void
        + searchProduct(productId:Number, name: String, category: String): Product
    }

    class Product {
        id: Number
        name: String
        category: String
        price: Number
    }
}

ProductService ..> Product

package StocksMicroservice {
    class StocksService {
        + addStocks(productId: Number, amount: Number, storeId: Number): Void
        + getStocks(productId: Number, storeId: Number): Stock
        + decrementStocks(productId: Number, amount: Number, storeId: Number): Void
    }

    class Stock {
        amount: Number
        storeId: Number
        productId: Number
    }
}

StocksService ..> Stock


package SalesMicroservice {
    class SalesService {
        + createSales(productSales: ProductSales, storeId: Number): Void
        + getSales(salesId: String, storeId: Number): Sales
        + cancelSales(salesId: String, storeId: Number) : Void
    }
    class ProductSales {
        amount: Number
        productId: Number
    }

    class Sales {
        date: DateTime
        isCancelled: Boolean
        storeId: Number
    }
}

SalesService ..> ProductSales
SalesService ..> Sales
SalesService ..> StocksService

package AccountMicroservice{
    class AccountService {
        + createAccount(name: String, password: String): Void
        + getAllAccount(): Account[]
    }

    class Account {
        name: String
        password: String
    }
}

AccountService ..> Account

package ShoppingCartMicroservice {
    class ShoppingCartService{
        + addItemsToCart(productSalesCart: ProductSalesCart, storeId: Number, accountId: Number): Void
        + getCart(storeId: Number, accountId: Number): Sales
        + checkoutCart(storeId: Number, accountId: Number): Void
    }

    class ProductSalesCart as "ProductSales" {
        productId: Number
        amount: Number
    }

    class SalesCart as "Sales" {
        date: DateTime
        storeId: Number
        clientId: Number
    }
}

ShoppingCartService ..> ProductSalesCart
ShoppingCartService ..> SalesCart
ShoppingCartService ..> StocksService



Sales "1" *-- "*" ProductSales

SalesCart "1" *-- "*" ProductSalesCart


@enduml